2008-07-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	Bug 544736 – Use single GTK+ includes

	* src/gossip-cell-renderer-expander.c:
	* src/gossip-cell-renderer-expander.h:
	* src/vinagre-app.c:
	* src/vinagre-app.h:
	* src/vinagre-applet.c:
	* src/vinagre-bacon.c:
	* src/vinagre-bacon.h:
	* src/vinagre-bookmarks.c:
	* src/vinagre-bookmarks.h:
	* src/vinagre-commands.c:
	* src/vinagre-commands.h:
	* src/vinagre-connect.c:
	* src/vinagre-connection.c:
	* src/vinagre-connection.h:
	* src/vinagre-fav.c:
	* src/vinagre-main.c:
	* src/vinagre-mdns.h:
	* src/vinagre-notebook.c:
	* src/vinagre-notebook.h:
	* src/vinagre-prefs.c:
	* src/vinagre-prefs.h:
	* src/vinagre-tab.c:
	* src/vinagre-tab.h:
	* src/vinagre-ui.h:
	* src/vinagre-utils.c:
	* src/vinagre-utils.h:
	* src/vinagre-window-private.h:
	* src/vinagre-window.c:
	* src/vinagre-window.h:

	Use single <gtk/gtk.h> includes. Also fixed malformed
	Vim modelines.

2008-06-16  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.5

==================== 2.23.4 =====================

2008-06-13  Jonh Wendell <jwendell@gnome.org>

	* Added a panel applet.

2008-06-02  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.4

==================== 2.23.3 =====================

2008-06-02  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-bookmarks.c (vinagre_bookmarks_init):
	Use XDG recomendation to store bookmarks file. Make sure to copy
	the old file to new location. Fixes #536111.

2008-06-01  Jonh Wendell <jwendell@gnome.org>

	Reworked 'edit bookmark' window, among other things...

2008-05-31  Jonh Wendell <jwendell@gnome.org>

	Fix bug #515816 - connect dialog should remember Host/Port address.
	Also added options to connect in fullscreen, view only and with scaling
	directly in the connection dialog.

2008-05-31  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-app.c: Persist changes in menu shortcuts (Ubuntu #233918).

2008-05-30  Jonh Wendell <jwendell@gnome.org>
