@@ -33,8 +33,8 @@ GNOME_DOC_INIT
 # Check required GNOME libraries
 #*******************************************************************************
 
-GLIB_REQUIRED=2.15.3
-GTK_REQUIRED=2.12.0
+GLIB_REQUIRED=2.17.0
+GTK_REQUIRED=2.13.1
 LIBGLADE_REQUIRED=2.6.0
 GCONF_REQUIRED=2.16.0
 GTHREAD_REQUIRED=2.0.0
