@@ -1,3 +1,9 @@
+2008-08-18  Jonh Wendell <jwendell@gnome.org>
+
+	* configure.ac: Requires gtk+ >= 2.13.1, glib >= 2.17.0
+	* src/vinagre-utils.c: Uses new gtk+ functions instead of gnome-open.
+	Closes #514064.
+
 2008-07-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
 	Bug 544736 – Use single GTK+ includes
